--- a/.htaccess
+++ b/.htaccess
@@ -1,3 +1,3 @@
 RewriteEngine On
+RewriteRule api/bot473002661:AAEsj26lXrKllYBfe5JXHphdHWYxX41dfj$ TelegramBot.php
 RewriteRule ^api api/index.php
-RewriteRule ^api/bot473002661:AAEsj26lXrKllYBfe5JXHphdHWYxX41dfjA api/TelegramBot.php
