set app_debug to true

--- a/final/.env
+++ b/final/.env
@@ -1,7 +1,7 @@
 APP_NAME=Laravel
 APP_ENV=production
 APP_KEY=base64:oErXeJinTojvZXL+T52U/skLMkJUR2tb0FOs+ojH8g4=
-APP_DEBUG=false
+APP_DEBUG=true
 APP_URL=grupo1.proyecto2017.linti.unlp.edu.ar/final
 APP_TIMEZONE=America/Argentina/Buenos_Aires
 APP_LOCALE=es
